--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  Todo List
-  <div id="app"></div>
-</body>
-<script>
-  fetch('https://api.pexels.com/v1/search?query=bicycle&per_page=10',{
-    headers: {
-      'Authorization': 'replace dengan token anda sendiri'
-    }
-  })
-    .then(response => response.json())
-    .then(body => {
-      const imageList = body.photos.map((photo) => (
-        `<img src="${photo.src.large}"/>`
-      ))
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        Todo List
+        <div id="app"></div>
+    </body>
+    <script>
+        fetch("https://api.pexels.com/v1/search?query=api&per_page=10", {
+            headers: {
+                Authorization:
+                    "m5jcsslottjqkez7HRCgwGKliqAnR5YVBbH3lomB33dCrZQUfUUU8moE",
+            },
+        })
+            .then((balasan) => balasan.json())
+            .then((badan) => {
+                const imageList = badan.photos
+                    .map((gambar) => `<img src="${gambar.src.small}" alt="" />`)
+                    .join(" ");
 
-      
-      return imageList
-    })
-    .then(list => {
-      document.getElementById('app').innerHTML = list
-    })
-    .catch(err => {debugger})
-
- 
-</script>
+                return imageList;
+            })
+            .then((senarai) => {
+                document.getElementById("app").innerHTML = senarai;
+            })
+            .catch((err) => {
+                debugger;
+            });
+    </script>
 </html>
